# Sample-Client-Server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client.c  debug.bat  run.bat  run.sh  server.c
dependencies/: CMakeLists.txt
modelFiles/: czlowiek.blend  czlowiek.blend1  czlowiek.glb
models/: czlowiek.glb
models/CesiumMan/: CesiumManAnimations.glb
networking/: CMakeLists.txt  client.c  server.c
shaders/: animation.vert  debugShader.frag  playerAnimation.vert  playerShader.frag  shader.frag  shader.vert  shader2d.frag  shader2d.vert  shaderText.frag  skybox.frag  skybox.vert  text.frag  text.vert  text2d.vert
source/: CMakeLists.txt  main.c
source/button/: button.c  button.h
source/camera/: camera.c  camera.h
source/engine/: VulkanTools.h  drawFrame.c  getCoordinate.c
source/engine/assets/models/: actualModel.h
source/engine/assets/models/loader/: gltfLoader.c  isClockWise.c  modelLoader.c  modelLoader.h  objLoaderl.c  triangulation.c  ttfLoader.c
source/engine/assets/textures/: texture.h  textureLoader.c
source/engine/assets/textures/functions/: textureImageView.c
source/engine/bufferDefinitions/: Vertex.h  createInstance.c  instanceBuffer.h  uniformBufferObject.h
source/engine/buffers/: buffer.h  storageBuffer.c  uniformBuffer.c
source/engine/descriptors/: cameraSet.c  descriptor.h  objectSet.c
source/engine/engineCore/: engineCore.c  engineCore.h
source/engine/engineCore/GraphicsSetup/: graphicsSetup.c  graphicsSetup.h
source/engine/engineCore/GraphicsSetup/functions/: graphicsFunctions.h  instance.c  renderPass.c  swapChain.c
source/engine/engineCore/deltaTimeManager/: deltaTime.c  deltaTime.h
source/engine/engineCore/resourceManager/: resourceManager.c  resourceManager.h
source/engine/engineCore/soundManager/: soundManager.c  soundManager.h
source/engine/engineCore/windowManager/: window.c  windowManager.c  windowManager.h
source/engine/entities/: createEntity.c  entity.h  entityBuilder.h
source/engine/entities/model/: createModel.c  model.h  modelBuilder.h
source/engine/entities/string/: createString.c  stringBuilder.h  stringEntity.h
source/engine/model/: createModel.c  model.h  modelBuilder.h
source/engine/model/functions/: modelFunctions.h
source/engine/pipeline/: graphicsPipelineObj.c  graphicsPipelineObj.h
source/engine/pipeline/functions/: graphicsPipeline.c  pipelineFunctions.h  pipelineLayout.c
source/engine/renderPass/: renderPass.c  renderPass.h
source/engine/renderPass/camera/: camera.c  camera.h  updateCamera.c
source/engine/renderPass/core/: renderPassCore.c  renderPassCore.h
source/engine/setup/: setup.c
source/engine/setup/GraphicsSetup/: graphicsSetup.c  graphicsSetup.h
source/engine/setup/GraphicsSetup/functions/: graphicsFunctions.h  imageViews.c  instance.c  logicalDevice.c  physicalDevice.c
source/engine/setup/GraphicsSetup/functions/imageOperations/: imageOperations.c  imageOperations.h
source/engine/setup/GraphicsSetup/swapChain/: swapChain.h
source/engine/setup/deltaTime/: deltaTime.c  deltaTime.h
source/engine/setup/windowControl/: windowControl.h
source/graphics/: VulkanTools.h  drawFrame.c  viewProj.c
source/graphics/buffers/: instanceBuffer.h
source/graphics/descriptors/: cameraSet.c  descriptor.h  descriptorSet.c  objectSet.c  textureSet.c
source/graphics/model/: createModel.c  model.h
source/graphics/model/builder/: modelBuilder.h
source/graphics/model/builder/loader/: gltfLoader.c  modelLoader.h  objLoaderl.c
source/graphics/model/descriptors/: textures.c
source/graphics/model/functions/: graphicsPipeline.c  modelFunctions.h  storageBuffer.c  textureImage.c  vertexBuffer.c
source/graphics/setup/: setup.c
source/graphics/setup/GraphicsSetup/: graphicsSetup.c
source/graphics/setup/GraphicsSetup/functions/: colorResources.c  depthResource.c  imageViews.c  renderPass.c  swapChain.c  uniformBuffer.c
source/graphics/setup/window/: window.c  window.h
source/graphics/setup/windowControl/: windowControl.c
source/pathfinding/: pathfinding.c  pathfinding.h
source/player/: animate.c  colision.c  player.c  player.h  playerCamera.c
source/state/: game.c  loadGame.c  loadMenu.c  loadResources.c  menu.c  pause.c  state.h  win.c
